// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComposedBodyFromArray should match snapshot, empty body, auto text align 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.25}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
      {
        "textAlign": "auto",
      },
    ]
  }
/>
`;

exports[`ComposedBodyFromArray should match snapshot, empty body, center text align 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.25}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
      {
        "textAlign": "center",
      },
    ]
  }
/>
`;

exports[`ComposedBodyFromArray should match snapshot, empty body, default text align 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.25}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
      {
        "textAlign": "center",
      },
    ]
  }
/>
`;

exports[`ComposedBodyFromArray should match snapshot, empty body, justify text align 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.25}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
      {
        "textAlign": "justify",
      },
    ]
  }
/>
`;

exports[`ComposedBodyFromArray should match snapshot, empty body, left text align 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.25}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
      {
        "textAlign": "left",
      },
    ]
  }
/>
`;

exports[`ComposedBodyFromArray should match snapshot, empty body, right text align 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.25}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
      {
        "textAlign": "right",
      },
    ]
  }
/>
`;

exports[`ComposedBodyFromArray should match snapshot, multiple items body, auto text align 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.25}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
      {
        "textAlign": "auto",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    Multiple 
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
        },
      ]
    }
  >
    styles
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 24,
        },
      ]
    }
  >
     text 
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "500",
          "lineHeight": 24,
        },
      ]
    }
  >
    just
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 24,
        },
      ]
    }
  >
     weights
  </Text>
</Text>
`;

exports[`ComposedBodyFromArray should match snapshot, multiple items body, center text align 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.25}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
      {
        "textAlign": "center",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    Multiple 
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
        },
      ]
    }
  >
    styles
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 24,
        },
      ]
    }
  >
     text 
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "500",
          "lineHeight": 24,
        },
      ]
    }
  >
    just
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 24,
        },
      ]
    }
  >
     weights
  </Text>
</Text>
`;

exports[`ComposedBodyFromArray should match snapshot, multiple items body, default text align 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.25}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
      {
        "textAlign": "center",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    Multiple 
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
        },
      ]
    }
  >
    styles
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 24,
        },
      ]
    }
  >
     text 
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "500",
          "lineHeight": 24,
        },
      ]
    }
  >
    just
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 24,
        },
      ]
    }
  >
     weights
  </Text>
</Text>
`;

exports[`ComposedBodyFromArray should match snapshot, multiple items body, justify text align 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.25}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
      {
        "textAlign": "justify",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    Multiple 
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
        },
      ]
    }
  >
    styles
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 24,
        },
      ]
    }
  >
     text 
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "500",
          "lineHeight": 24,
        },
      ]
    }
  >
    just
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 24,
        },
      ]
    }
  >
     weights
  </Text>
</Text>
`;

exports[`ComposedBodyFromArray should match snapshot, multiple items body, left text align 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.25}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
      {
        "textAlign": "left",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    Multiple 
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
        },
      ]
    }
  >
    styles
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 24,
        },
      ]
    }
  >
     text 
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "500",
          "lineHeight": 24,
        },
      ]
    }
  >
    just
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 24,
        },
      ]
    }
  >
     weights
  </Text>
</Text>
`;

exports[`ComposedBodyFromArray should match snapshot, multiple items body, right text align 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.25}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
      {
        "textAlign": "right",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    Multiple 
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
        },
      ]
    }
  >
    styles
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 24,
        },
      ]
    }
  >
     text 
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "500",
          "lineHeight": 24,
        },
      ]
    }
  >
    just
  </Text>
  <Text
    allowFontScaling={false}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.25}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 24,
        },
      ]
    }
  >
     weights
  </Text>
</Text>
`;
